# compilador-simple

./: AST_classes.cc  AST_classes.cpp  AST_classes.hh  CMakeLists.txt  KaleidoscopeJIT.h  KaleidoscopeJIT.hh  README.md  RemoteJITUtils.h  a.out  analise_semantica.cc  analise_semantica.hh  code_gen.cc  code_gen.hh  driver.cc  duvidas.txt  execucao_teste  fonte.as  fonte.ll  fonte.s  location.hh  main  main.cc  parser.output  parser.tab.cc  parser.tab.hh  parser.yy  ra99571_ra78605.tar.xz  rascunho.txt  sc  scanner.ll  script.sh  script_linux.sh  test-function  test-function.s  test.c  test.s  teste.as  teste14.s  teste18_i.s  teste19.s  (+11 more)
make2/: CMakeCache.txt  Makefile  cmake_install.cmake  location.hh  parser.cc  parser.hh  scanner.cc
testes/(a) Léxico/: teste11.s  teste12.s  teste17.s  teste18.s  teste1_i.s  teste2.s  teste21.s  teste24.s  teste25.s  teste28.s  teste3.s  teste31.s  teste32.s  teste39.s  teste4.s  teste42.s  teste45.s  teste46.s  teste5.s  teste7.s  teste8.s  teste9.s
testes/(b) SIntático/: teste10.s  teste15.s  teste16.s  teste17.s  teste2.s  teste22.s  teste26.s  teste30.s  teste35.s  teste4.s  teste43.s  teste9.s
testes/(b) Sintático/: teste10.s  teste11.s  teste13.s  teste19_i.s  teste27.s  teste28.s  teste29.s  teste30.s  teste31.s  teste32.s  teste33.s  teste34.s  teste35.s  teste36.s  teste37.s  teste38.s  teste39.s  teste3_i.s  teste40.s  teste44.s  teste5.s  teste6.s  teste7_i.s
testes/(c) Semântico/: teste23.s  teste41.s  teste47.s
